# ModernCompTech_O

./: README.md
task1_hanoi_tower/: Cargo.toml
task1_hanoi_tower/src/: main.rs
task8_nanotubes/: Cargo.toml
task8_nanotubes/src/: main.rs
task9_markov_chain/: Cargo.toml
task9_markov_chain/src/: main.rs
