[package]
name = "task8_nanotubes"
author = "Myshko Dm. <my.email@gmail.com>"
version = "0.0.0"
edition = "2021"
about = "generate nanotubes from chirality numbers and repetion count and save in pdb file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
